# backend/app/Domain/Entities/Product.php
@@ -6,7 +6,6 @@ class Product
 {
     public ?int $ProductID;
     public string $Name;
-    public ?float $Price = null;
     public bool $IsFavorite = false;
     public string $Category;
     public ?string $Status = null;
@@ -14,11 +13,10 @@ class Product
     public array $ShoppingListItems = [];
     public array $Photos = [];
 
-    public function __construct(?int $ProductID, string $Name, ?float $Price = null, bool $IsFavorite = false, string $Category)
+    public function __construct(?int $ProductID, string $Name, bool $IsFavorite = false, string $Category)
     {
         $this->ProductID = $ProductID;
         $this->Name = $Name;
-        $this->Price = $Price;
         $this->IsFavorite = $IsFavorite;
         $this->Category = $Category;
     }
